# openclaw-skilltrust

./: .gitattributes  .gitignore  CONTRIBUTING.md  ENTERPRISE_READINESS.md  LICENSE  README.md  RELEASE_AUDIT.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  plugin.json  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: skilltrust-evidence.yml
artifacts/: skilltrust-bom.json
artifacts/quarantine-evidence/: executive-summary.md  remediation-checklist.md  risk-register.csv  skilltrust-bom.json  skilltrust-report.html  skilltrust-report.json  skilltrust-report.md  supply-chain-review.md
artifacts/safe-evidence/: executive-summary.md  remediation-checklist.md  risk-register.csv  skilltrust-bom.json  skilltrust-report.html  skilltrust-report.json  skilltrust-report.md  supply-chain-review.md
examples/: README.md  risky-report.json  risky-report.md  safe-report.json  safe-report.md
examples/risky-quarantine-bundle/: README.md  skilltrust-report.json  skilltrust-report.md
examples/sample-risky-skill/: SKILL.md  plugin.json
examples/sample-safe-skill/: SKILL.md  plugin.json
examples/sample-social-account-skill/: SKILL.md  plugin.json
skilltrust/: __init__.py  bom.py  capabilities.py  cli.py  compliance.py  detectors.py  discovery.py  evidence.py  manifest.py  models.py  policies.py  probes.py  quarantine.py  readiness.py  report_renderer.py  runtime_guard.py  sarif.py  scanner.py  supply_chain.py  trust_score.py
tests/: test_skilltrust.py
