[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-skilltrust"
version = "0.1.0"
description = "Open-source trust and audit layer for AI-agent skills, MCP tools, plugins, and connectors."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenClaw SkillTrust contributors", email = "contributors@example.invalid"}]
keywords = ["ai-agents", "security", "mcp", "plugins", "skills", "governance", "open-source"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
skilltrust = "skilltrust.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skilltrust*"]
